--- a/css/styles.css
+++ b/css/styles.css
@@ -360,15 +360,17 @@ body {
 }
 
 .social {
-  flex-direction: column;
   width: 206px;
-  height: 80px;
   margin-left: 80px;
 }
 
 .social-list {
   display: flex;
   justify-content: space-between;
+}
+
+.social-list-item-footer {
+  margin-left: 6px;
 }
 
 .social-list-icon {
@@ -687,6 +689,78 @@ body {
 .footer-link:focus,
 .footer-link:hover {
   color: var(--secondary-color);
+}
+
+.footer-email-container {
+  display: block;
+  flex-direction: column;
+  width: 206px;
+  height: 80px;
+  margin-left: 90px;
+  width: 100%;
+}
+
+.footer-email-container-name {
+  flex-direction: column;
+  font-family: var(--secondary-color);
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--secondary-color);
+  margin-bottom: 20px;
+  white-space: nowrap;
+}
+
+.footer-email-name {
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  padding: 15px 16px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  border-radius: 4px;
+  color: var(--secondary-color);
+  font-size: 16px;
+  line-height: 1.25;
+}
+
+.icon-send {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+  fill: var(--main-color);
+}
+
+.footer-email-field {
+  display: block;
+  position: relative;
+}
+
+.modal-footer-wrapper-button {
+  display: inline-flex;
+  color: var(--secondary-color);
+  background-color: var(--button-hover-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.8;
+  border: none;
+  box-shadow: 0 4px 4px rgb(0 0 0 / 15%);
+  transition: background-color 250ms var(--cubic);
+  border-radius: 4px;
+  align-items: center;
+  padding-top: 10px;
+  padding-right: 28px;
+  padding-bottom: 10px;
+  padding-left: 29px;
+  cursor: pointer;
+}
+
+.modal-footer-wrapper-button:focus,
+.modal-footer-wrapper-button:hover {
+  background-color: var(--accent-color);
 }
 
 /* end footer */
